--- a/src/Projects/Carousel.css
+++ b/src/Projects/Carousel.css
@@ -9,31 +9,52 @@ ul {
 }
 
 .slick-slider {
-  display: block;
-  flex-direction: row;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 .slick-list {
 
-  position: relative;
 }
+
 .slick-slide {
 
 }
 
 div.slick-slider > div.slick-arrow {
   display: block;
+  top: 0;
   height: 100%;
-  width: 8vw;
+  width: 4vw;
   cursor: pointer;
   font-size: 25em;
-  padding: 0;
-  background-color: #07BAC2;
+  padding: 1%;
   z-index: 99;
+  background-color: transparent;
 }
-div.slick-slider > .slick-next {
 
+div.slick-slider > div.slick-arrow::before {
+  color: #888;
+  font-size: 40px;
+  position: absolute;
+  top: 50%;
+  transform: translateX(-50%);
+}
+
+div.slick-slider > .slick-prev {
+  left: 2%;
+  -moz-animation: bounce-left 2s infinite;
+  -webkit-animation: bounce-left 2s infinite;
+  animation: bounce-left 2s infinite;
+}
+
+div.slick-slider > .slick-next {
+  right: 6%;
+  -moz-animation: bounce-right 2s infinite;
+  -webkit-animation: bounce-right 2s infinite;
+  animation: bounce-right 2s infinite;
 }
 
 .slick-dots {
@@ -46,7 +67,17 @@ div.slick-slider > .slick-next {
   cursor: pointer;
 }
 
+@media screen and (min-width: 600px) {
+  div.slick-slider > .slick-next {
+    right: 2%;
+  }
+}
+
 @media screen and (min-width: 900px) {
+
+  div.slick-slider > div.slick-arrow {
+    /* background-color: #07BAC2; */
+  }
 
   .slider-wrapper {
     width: 85vw;
@@ -98,6 +129,43 @@ div.slick-slider > .slick-next {
   position: relative;
   display: flex;
 }
+
+.bounce-left {
+  -moz-animation: bounce-left 2s infinite;
+  -webkit-animation: bounce-left 2s infinite;
+  animation: bounce-left 2s infinite;
+}
+
+.bounce-right {
+  -moz-animation: bounce-right 2s infinite;
+  -webkit-animation: bounce-right 2s infinite;
+  animation: bounce-right 2s infinite;
+}
+
+@keyframes bounce-left {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateX(0);
+  }
+  40% {
+    transform: translateX(-5px);
+  }
+  60% {
+    transform: translateX(-5px);
+  }
+}
+@keyframes bounce-right {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateX(0);
+  }
+  40% {
+    transform: translateX(5px);
+  }
+  60% {
+    transform: translateX(5px);
+  }
+}
+
+
 /*
 {// className="project-swipeable"
   // onSwipingRight={ (e) => this.goToPrevSlide(e)}
