--- a/src/Projects/Slide.css
+++ b/src/Projects/Slide.css
@@ -1,5 +1,5 @@
 .slide {
-  height: 100%;
+  height: 600px;
   width: 100%;
   list-style-type: none;
   text-align: center;
@@ -77,6 +77,7 @@
 
 .card-button {
   font-size: 2em;
+  display: flex;
   opacity: 0;
 }
 
