--- a/src/Projects/SliderArrow.css
+++ b/src/Projects/SliderArrow.css
@@ -1,41 +1,22 @@
-.arrow-container {
-  height: 50vh;
-  width: 5vw;
-  color: #07BAC2;
-  position: absolute;
-  opacity: 0;
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-@media screen and (min-width: 900px) {
-
-  .arrow-container {
-    opacity: 1;
-  }
-}
-
 .slider-btn {
   height: 100%;
-  width: 7vw;
-  box-sizing: border-box;
+  width: 5vw;
   cursor: pointer;
-  font-size: 25px;
+  font-size: 5em;
   padding: 0;
   opacity: 0;
   background-color: #07BAC2;
-  z-index: 99;
+  /* z-index: 99; */
   position: absolute;
+  top: 50;
 }
 
 .right {
-  right: 0;
+
 }
 
 .left {
-  left: 0;
+  justify-self: flex-start;
 }
 
 .slider-btn > i.fa {
@@ -43,21 +24,22 @@
 }
 
 @media screen and (min-width: 900px) {
-
+/*
   .slider-btn {
     opacity: 1;
     border: 0.5px solid transparent;
   }
-  
+
   .slider-btn:hover {
     transition: opacity .15s cubic-bezier(.4, 0, 1, 1);
     border: 0.5px solid #ccc;
     box-shadow:	0px 1px 3px 0px rgba(0, 0, 0, .3);
   }
-  
+
   .slider-btn:hover > i.fa {
     color: #ccc;
   }
+  */
 }
 
 .bounce-left {
